--- a/angular.json
+++ b/angular.json
@@ -276,6 +276,130 @@
           }
         }
       }
+    },
+    "angular-pwa": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/angular-pwa",
+      "sourceRoot": "projects/angular-pwa/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/angular-pwa",
+            "index": "projects/angular-pwa/src/index.html",
+            "main": "projects/angular-pwa/src/main.ts",
+            "polyfills": "projects/angular-pwa/src/polyfills.ts",
+            "tsConfig": "projects/angular-pwa/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "projects/angular-pwa/src/favicon.ico",
+              "projects/angular-pwa/src/assets",
+              "projects/angular-pwa/src/manifest.webmanifest"
+            ],
+            "styles": [
+              "projects/angular-pwa/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/angular-pwa/src/environments/environment.ts",
+                  "with": "projects/angular-pwa/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "projects/angular-pwa/ngsw-config.json"
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "angular-pwa:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "angular-pwa:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "angular-pwa:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/angular-pwa/src/test.ts",
+            "polyfills": "projects/angular-pwa/src/polyfills.ts",
+            "tsConfig": "projects/angular-pwa/tsconfig.spec.json",
+            "karmaConfig": "projects/angular-pwa/karma.conf.js",
+            "assets": [
+              "projects/angular-pwa/src/favicon.ico",
+              "projects/angular-pwa/src/assets",
+              "projects/angular-pwa/src/manifest.webmanifest"
+            ],
+            "styles": [
+              "projects/angular-pwa/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/angular-pwa/tsconfig.app.json",
+              "projects/angular-pwa/tsconfig.spec.json",
+              "projects/angular-pwa/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/angular-pwa/e2e/protractor.conf.js",
+            "devServerTarget": "angular-pwa:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "angular-pwa:serve:production"
+            }
+          }
+        }
+      }
     }},
   "cli": {
     "analytics": false
